PHP - Day 13 -- JS Validations

--- a/php/blog/css/admin.css
+++ b/php/blog/css/admin.css
@@ -199,3 +199,6 @@ table.all-posts-table {
 .add-new-btn:hover {
     background: #0776B7;
 }
+.new-post-form .red-borders {
+    border-color: #cb0009 !important;
+}
