--- a/php/blog/css/admin.css
+++ b/php/blog/css/admin.css
@@ -202,3 +202,17 @@ table.all-posts-table {
 .new-post-form .red-borders {
     border-color: #cb0009 !important;
 }
+.msg {
+    width: 100%;
+    height: 35px;
+    background: green;
+    color: #fff;
+    text-align: center;
+    line-height: 35px;
+    font-weight: bold;
+    font-size: 16px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: none;
+}
